--- a/index.html
+++ b/index.html
@@ -18,132 +18,120 @@
       </div>
 
       <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="#" class="btn header-menu-item">Quem Somos</a></li>
-        <li><a href="#" class="btn header-menu-item">PAY&GO</a></li>
-        <li><a href="#" class="btn header-menu-item">Blog</a></li>
-        <li><a href="#" class="btn header-menu-item">FAQs</a></li>
-        <li><a href="#" class="btn header-menu-item">Contactos</a></li>
+        <li><a href="quemsomos.html" class="btn header-menu-item">Quem Somos</a></li>
+        <li><a href="planos.html" class="btn header-menu-item">PAY&GO</a></li>
+        <li><a href="faqs.html" class="btn header-menu-item">Blog</a></li>
+        <li><a href="faqs.html" class="btn header-menu-item">FAQs</a></li>
+        <li><a href="contacto.html" class="btn header-menu-item">Contactos</a></li>
       </ul>
 
       <div class="col-md-3 text-end">
-        <button type="button" class="btn-registo rounded-pill">Registo</button>
+        <button type="button" onclick="location.href='registo.html'" class="btn-registo rounded-pill">Registo</button>
         <button type="button" class="btn-signin rounded-pill">Iniciar Sessão</button>
       </div>
     </header>
   </div>
 
   <div class="fundo-jumbo">
-    <div class="p-5 rounded-3 row align-items-md-stretch">
-      <div class="row">
-        <div class="p-5 col-md-6">
-          <p class="h-20 jumbo-header">
-            Cobranças e faturação descomplicadas
-          </p>
-          <p class="h-20 jumbo-text">
-            uma forma rápida e intuitiva de organizar a sua faturação e
-            agendar cobranças automáticas
-          </p>
-          <div class="h-20">
-            <button class="btn-calltoaction rounded-pill" type="button">
-              Saber mais
-            </button>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <img class="img-fluid" src="dist/img/pc.png" alt="Agilize as suas Cobranças" />
+    <div class="row p-5">
+      <div class="p-5 col-md-6">
+        <p class="jumbo-header">
+          Cobranças e faturação descomplicadas
+        </p>
+        <p class="jumbo-text">
+          uma forma rápida e intuitiva de organizar a sua faturação e
+          agendar cobranças automáticas
+        </p>
+        <div>
+          <button class="btn-calltoaction rounded-pill" type="button">
+            Saber mais
+          </button>
         </div>
       </div>
+      <div class="col-md-6">
+        <img class="img-fluid" src="dist/img/pc.png" alt="Agilize as suas Cobranças" />
+      </div>
     </div>
-    <div class="msg-pode-contar">com o pay&go pode contar com</div>
+    <div class="row">
+      <div class="col">
+        <div class="msg-pode-contar">com o pay&go pode contar com</div>
+      </div>
+    </div>
   </div>
 
-  <div class="album py-5 fundo-album">
+  <div class="album">
     <div class="container">
       <div class="row row-cols-2 row-cols-sm-2 row-cols-md-4">
         <div class="col">
-          <div class="card shadow-sm">
-            <object data="dist/img/image 31.svg" type="image/svg+xml"></object>
+          <div class="card" style="top: -60px;">
+            <img src="dist/img/cobrancas.png" alt="Agilize as suas Cobranças" />
             <div class="card-body">
               <p class="card-text home-card-text">
-                agendamento de Cobranças recorrentes
+                Agendamento de Cobranças Recorrentes
               </p>
             </div>
           </div>
         </div>
         <div class="col">
-          <div class="card shadow-sm">
-            <object data="dist/img/image 30.svg" type="image/svg+xml"></object>
+          <div class="card" style="top: -60px;">
+            <img src="dist/img/faturacao.png" alt="Agilize as suas Cobranças" />
             <div class="card-body">
-              <p class="card-text home-card-text">faturação Automatizada</p>
+              <p class="card-text home-card-text">Faturação Automatizada</p>
             </div>
           </div>
         </div>
         <div class="col">
-          <div class="card shadow-sm">
-            <object data="dist/img/image 32.svg" type="image/svg+xml"></object>
+          <div class="card" style="top: -60px;">
+            <img src="dist/img/envio.png" alt="Agilize as suas Cobranças" />
             <div class="card-body">
               <p class="card-text home-card-text">
-                envio por Email e whatsapp
+                Envio por Email e WhatsApp
               </p>
             </div>
           </div>
         </div>
 
         <div class="col">
-          <div class="card shadow-sm">
-            <object data="dist/img/image 33.svg" type="image/svg+xml"></object>
+          <div class="card" style="top: -60px;">
+            <img src="dist/img/seguro.png" alt="Agilize as suas Cobranças" />
             <div class="card-body">
-              <p class="card-text home-card-text">seguro e confiável</p>
+              <p class="card-text home-card-text">
+                Seguro e Confiável</p>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-
 
   <div class="container">
 
     <div class="row">
       <div class="col">
-        <div class="contam-connosco">já contam conosco</div>
+        <div class="titulo-preto">já contam conosco</div>
       </div>
     </div>
     <div class="row">
       <div class="col">
-        <div class="card shadow-sm">
-          <img class="img-fluid" src="dist/img/logo-placeholder.png" alt="Clientes" />
-        </div>
+        <object data="dist/img/logo-axl.svg" type="image/svg+xml"></object>
       </div>
       <div class="col">
-        <div class="card shadow-sm">
-          <img class="img-fluid" src="dist/img/logo-placeholder.png" alt="Clientes" />
-        </div>
+        <object data="dist/img/logo-caco.svg" type="image/svg+xml"></object>
       </div>
       <div class="col">
-        <div class="card shadow-sm">
-          <img class="img-fluid" src="dist/img/logo-placeholder.png" alt="Clientes" />
-        </div>
+        <object data="dist/img/logo-ftp.svg" type="image/svg+xml"></object>
       </div>
       <div class="col">
-        <div class="card shadow-sm">
-          <img class="img-fluid" src="dist/img/logo-placeholder.png" alt="Clientes" />
-        </div>
+        <object data="dist/img/logo-hub.svg" type="image/svg+xml"></object>
       </div>
       <div class="col">
-        <div class="card shadow-sm">
-          <img class="img-fluid" src="dist/img/logo-placeholder.png" alt="Clientes" />
-        </div>
+        <object data="dist/img/logo-insta.svg" type="image/svg+xml"></object>
       </div>
       <div class="col">
-        <div class="card shadow-sm">
-          <img class="img-fluid" src="dist/img/logo-placeholder.png" alt="Clientes" />
-        </div>
+        <object data="dist/img/logo-proswim.svg" type="image/svg+xml"></object>
       </div>
       <div class="col">
-        <div class="card shadow-sm">
-          <img class="img-fluid" src="dist/img/logo-placeholder.png" alt="Clientes" />
-        </div>
+        <object data="dist/img/logo-trimanta.svg" type="image/svg+xml"></object>
       </div>
     </div>
   </div>
@@ -153,13 +141,10 @@
   <div class="container">
     <div class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading fw-normal lh-1">Quem é a webify?</h2>
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-          labore et dolore magna aliqua.
-
-          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+        <h2 class="titulo-preto">Quem é a WEBIFY?</h2>
+        <p class="lead">Somos uma empresa tecnológica focada na utilização das mais recentes e avançadas tecnologias com
+          o objectivo da automatização e desmaterialização de processos.
+          A sua atividade de desenvolvimento centraliza-se na optimização e economia dos recursos disponíveis.
         </p>
         <button type="button" class="btn-registo rounded-pill">Saber Mais</button>
       </div>
@@ -173,6 +158,11 @@
   <div style="padding: 60px;"></div>
 
   <div class="container">
+    <div class="row">
+      <div class="col">
+        <div class="titulo-preto text-center">temas que lhe podem interessar</div>
+      </div>
+    </div>
     <div class="row">
       <div class="col">
         <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
@@ -214,11 +204,24 @@
   <div class="newsletter">
     <div class="container">
       <div class="row">
-        <div class="col-md-4">
-          <h2 class="newsletter-title">Subscreva a
-            Newsletter</h2>
+        <div class="col-md-6">
+          <table>
+            <tr>
+              <td>
+                <h2 class="newsletter-title">Subscreva a
+                  Newsletter</h2>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <p class="newsletter-txt">Receba diretamente os melhores conselhos de como organisar as suas cobranças e
+                  faturação
+                </p>
+              </td>
+            </tr>
+          </table>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-2">
         </div>
         <div class="col-md-4">
           <table>
@@ -228,21 +231,20 @@
                   <span class="input-group-text">
                     <img src="dist/img/IconMail.svg" alt="Nome">
                   </span>
-                  <input type="email" class="form-control contact-input" id="email" placeholder="Email"
-                    autofocus="autofocus" required="required" maxlength="100">
+                  <input type="email" class="form-control contact-input" id="email" placeholder="Email" maxlength="100">
                   <div class="invalid-feedback">
                     O email é necessário.
                   </div>
               </td>
             </tr>
             <tr>
-              <td class="txt-politica text-center">
+              <td class="txt-politica">
                 <input type="checkbox" id="politica">
                 <a href="#" target="_blank" class="txt-politica">Li e aceito a Política de Privacidade do PAY&GO</a> 
               </td>
             </tr>
             <tr>
-              <td class="text-center">
+              <td class="">
                 <button class="btn-newsletter rounded-pill" type="button" style="height: 40px;">
                   Subscrever
                 </button>
@@ -310,11 +312,11 @@
             <div class="row contact-border-bottom">
               <div class="col">
                 <div class="contact-titulo">Morada</div>
-                <div class="contact-conteudo">
+                <div class="contact-conteudo" style="display:inline-flex;">
                   <span style="padding-right: 15px;">
                     <img src="dist/img/IconLocation.svg" alt="Morada">
                   </span>
-                  Rua da Arrábida, 68
+                  Rua da Arrábida, 68<br>
                   1250-034 Lisboa - Portugal
                 </div>
               </div>
@@ -342,8 +344,7 @@
                     <span class="input-group-text">
                       <img src="dist/img/IconPerson.svg" alt="Nome">
                     </span>
-                    <input type="text" class="form-control contact-input" id="nome" placeholder="Nome"
-                      autofocus="autofocus" required="required" maxlength="100">
+                    <input type="text" class="form-control contact-input" id="nome" placeholder="Nome" maxlength="100">
                     <div class="invalid-feedback">
                       O seu nome é necessário.
                     </div>
@@ -355,7 +356,7 @@
                       <img src="dist/img/IconPhone.svg" alt="Nome">
                     </span>
                     <input type="text" class="form-control contact-input" id="contacto" placeholder="Contacto"
-                      autofocus="autofocus" required="required" maxlength="100">
+                      maxlength="20">
                     <div class="invalid-feedback">
                       O seu contacto é necessário.
                     </div>
@@ -368,7 +369,7 @@
                       <img src="dist/img/IconMail.svg" alt="Nome">
                     </span>
                     <input type="email" class="form-control contact-input" id="email" placeholder="Email"
-                      autofocus="autofocus" required="required" maxlength="100">
+                      maxlength="100">
                     <div class="invalid-feedback">
                       O email é necessário.
                     </div>
@@ -379,7 +380,7 @@
                       <img src="dist/img/IconLightbulb.svg" alt="Nome">
                     </span>
                     <input type="text" class="form-control contact-input" id="assunto" placeholder="Assunto"
-                      autofocus="autofocus" required="required" maxlength="100">
+                      maxlength="100">
                     <div class="invalid-feedback">
                       O assunto é necessário.
                     </div>
@@ -400,7 +401,6 @@
                 </td>
               </tr>
               <tr>
-                <td></td>
                 <td class="ig-contact">
                   <button type="button" class="btn-contacto rounded-pill">Enviar Mensagem</button>
                 </td>
