--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="container">
     <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-2">
       <div class="col-md-3 mb-2 mb-md-0">
-        <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
+        <a href="index.html" class="d-inline-flex link-body-emphasis text-decoration-none">
           <object data="dist/img/logo-payandgo.svg" type="image/svg+xml"></object>
         </a>
       </div>
@@ -149,8 +149,8 @@
         <button type="button" class="btn-registo rounded-pill">Saber Mais</button>
       </div>
       <div class="col-md-5">
-        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-          src="dist/img/quem-webify.png" alt="WEBIFY" />
+        <img class="bd-placeholder-img bd-placeholder-img-lg img-fluid mx-auto p-2" src="dist/img/quem-webify.png"
+          alt="WEBIFY" />
       </div>
     </div>
   </div>
@@ -164,34 +164,34 @@
       </div>
     </div>
     <div class="row">
-      <div class="col">
+      <div class="col-sm-2 col-md-3">
         <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-          src="dist/img/Image Placeholder.png" alt="WEBIFY" width="100%" />
-        <h2 class="fw-normal" style="padding: 10px;">Lorem IPSUM</h2>
+          src="dist/img/image1.png" alt="WEBIFY" width="100%" />
+        <p class="blog-card-titulo">Benefícios da Automatização de Faturação</p>
         <p>Some representative placeholder content for the three columns of text below the carousel. This is the first
           column.</p>
         <p><a class="btn blog-btn rounded-pill" href="#">Ler Mais...</a></p>
       </div>
-      <div class="col">
+      <div class="col-sm-2 col-md-3">
         <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-          src="dist/img/Image Placeholder.png" alt="WEBIFY" width="100%" />
-        <h2 class="fw-normal" style="padding: 10px;">Lorem IPSUM</h2>
+          src="dist/img/image2.png" alt="WEBIFY" width="100%" />
+        <p class="blog-card-titulo">Facilidade de Uso da Plataforma</p>
         <p>Some representative placeholder content for the three columns of text below the carousel. This is the first
           column.</p>
         <p><a class="btn blog-btn rounded-pill" href="#">Ler Mais...</a></p>
       </div>
-      <div class="col">
+      <div class="col-sm-2 col-md-3">
         <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-          src="dist/img/Image Placeholder.png" alt="WEBIFY" width="100%" />
-        <h2 class="fw-normal" style="padding: 10px;">Lorem IPSUM</h2>
+          src="dist/img/image3.png" alt="WEBIFY" width="100%" />
+        <p class="blog-card-titulo">Suporte ao Cliente e Recursos de Ajuda</p>
         <p>Some representative placeholder content for the three columns of text below the carousel. This is the first
           column.</p>
         <p><a class="btn blog-btn rounded-pill" href="#">Ler Mais...</a></p>
       </div>
-      <div class="col">
+      <div class="col-sm-2 col-md-3">
         <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-          src="dist/img/Image Placeholder.png" alt="WEBIFY" width="100%" />
-        <h2 class="fw-normal" style="padding: 10px;">Lorem IPSUM</h2>
+          src="dist/img/image4.png" alt="WEBIFY" width="100%" />
+        <p class="blog-card-titulo">Tutoriais e Dicas</p>
         <p>Some representative placeholder content for the three columns of text below the carousel. This is the first
           column.</p>
         <p><a class="btn blog-btn rounded-pill" href="#">Ler Mais...</a></p>
@@ -264,7 +264,7 @@
     <div class="container">
 
       <div class="row">
-        <div class="col">
+        <div class="col-md-auto">
           <h2 class="featurette-heading fw-normal lh-1">Onde nos podem encontrar</h2>
 
           <p>Se quiser falar conosco, é só preencher o formulário ou usar os nossos contatos.
@@ -275,7 +275,7 @@
           &nbsp;
         </div>
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-sm-12 col-md-4">
             <div class="row contact-border-bottom">
               <div class="col">
                 <div class="contact-titulo">Apoio por mensagem whatsapp</div>
@@ -336,7 +336,7 @@
 
           </div>
           <div class="col-md-1"></div>
-          <div class="col-md-7">
+          <div class="col-xs-auto col-md-7">
             <table width="100%">
               <tr>
                 <td class="ig-contact">
