--- a/faqs.html
+++ b/faqs.html
@@ -12,8 +12,8 @@
   <div class="container">
     <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-2">
       <div class="col-md-3 mb-2 mb-md-0">
-        <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
-          <object data="dist/img/logo-payandgo.svg" type="image/svg+xml"></object>
+        <a href="index.html" class="d-inline-flex link-body-emphasis text-decoration-none">
+          <img src="dist/img/logo-payandgo.svg" alt="PAY&GO">
         </a>
       </div>
 
