--- a/planos.html
+++ b/planos.html
@@ -20,7 +20,7 @@
       <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
         <li><a href="quemsomos.html" class="btn header-menu-item">Quem Somos</a></li>
         <li><a href="planos.html" class="btn header-menu-item">PAY&GO</a></li>
-        <li><a href="#" class="btn header-menu-item">Blog</a></li>
+        <li><a href="blog.html" class="btn header-menu-item">Blog</a></li>
         <li><a href="faqs.html" class="btn header-menu-item">FAQs</a></li>
         <li><a href="contacto.html" class="btn header-menu-item">Contactos</a></li>
       </ul>
