Background img home

--- a/registo.html
+++ b/registo.html
@@ -32,7 +32,7 @@
     </header>
   </div>
 
-  <div class="contacto">
+  <div class="contacto" style="padding-bottom: 60px;">
 
     <div class="container">
 
