--- a/index.html
+++ b/index.html
@@ -411,34 +411,23 @@
     </div>
   </div>
 
-  <footer class="footer py-3">
+  <footer class="footer py-5">
     <div class="container">
-      <table width="100%">
-        <tr>
-          <td>
-            <div class="row border-bottom">
-              <div class="col-md-2">
-                <object data="dist/img/logo-pg-rodape.svg" type="image/svg+xml"></object>
-              </div>
-              <div class="col-10 col-md-auto mb-2 mb-md-0">
-                <ul class="nav">
-                  <li><a href="#" class="btn header-menu-item menu-item-footer">Quem Somos</a></li>
-                  <li><a href="#" class="btn header-menu-item menu-item-footer">PAY&GO</a></li>
-                  <li><a href="#" class="btn header-menu-item menu-item-footer">Blog</a></li>
-                  <li><a href="#" class="btn header-menu-item menu-item-footer">FAQs</a></li>
-                  <li><a href="#" class="btn header-menu-item menu-item-footer">Contactos</a></li>
-                </ul>
-              </div>
-            </div>
-          </td>
-          <td rowspan="2" style="padding-left:80px;">
-            <a href="#" class="btn header-menu-item menu-item-footer">Termos Legais</a>
-          </td>
-        </tr>
-        <tr>
-          <td>&nbsp;</td>
-        </tr>
-      </table>
+      <div class="row border-bottom">
+        <div class="col-md-2">
+          <object data="dist/img/logo-pg-rodape.svg" type="image/svg+xml"></object>
+        </div>
+        <div class="col-10 col-md-auto mb-2 mb-md-0">
+          <ul class="nav">
+            <li><a href="#" class="btn header-menu-item menu-item-footer">PAY&GO</a></li>
+            <li><a href="#" class="btn header-menu-item menu-item-footer">Quem Somos</a></li>
+            <li><a href="#" class="btn header-menu-item menu-item-footer">Blog</a></li>
+            <li><a href="#" class="btn header-menu-item menu-item-footer">FAQs</a></li>
+            <li><a href="#" class="btn header-menu-item menu-item-footer">Contactos</a></li>
+            <li><a href="#" class="btn header-menu-item menu-item-footer">Termos Legais</a></li>
+          </ul>
+        </div>
+      </div>
     </div>
   </footer>
 
