--- a/contacto.html
+++ b/contacto.html
@@ -59,8 +59,8 @@
                 method="post" class="form-wrapper">
 
                 <div class="row">
-                  <div class="col-md-6 ig-contact">
-                    <div class="input-group has-validation">
+                  <div class="col-md-6">
+                    <div class="input-group mb-3">
                       <span class="input-group-text">
                         <img src="dist/img/IconPerson.svg" alt="Nome">
                       </span>
@@ -68,8 +68,8 @@
                         required>
                     </div>
                   </div>
-                  <div class="col-md-6 ig-contact">
-                    <div class="input-group has-validation">
+                  <div class="col-md-6">
+                    <div class="input-group mb-3">
                       <span class="input-group-text">
                         <img src="dist/img/IconPhone.svg" alt="Telemovel">
                       </span>
@@ -79,8 +79,8 @@
                   </div>
                 </div>
                 <div class="row">
-                  <div class="col-md-6 ig-contact">
-                    <div class="input-group has-validation">
+                  <div class="col-md-6">
+                    <div class="input-group mb-3">
                       <span class="input-group-text">
                         <img src="dist/img/IconMail.svg" alt="Nome">
                       </span>
@@ -88,8 +88,8 @@
                         maxlength="100" required>
                     </div>
                   </div>
-                  <div class="col-md-6 ig-contact">
-                    <div class="input-group has-validation">
+                  <div class="col-md-6">
+                    <div class="input-group mb-3">
                       <span class="input-group-text">
                         <img src="dist/img/IconLightbulb.svg" alt="Nome">
                       </span>
@@ -99,8 +99,8 @@
                   </div>
                 </div>
                 <div class="row">
-                  <div class="col-md-12 ig-contact">
-                    <div class="input-group has-validation">
+                  <div class="col-md-12">
+                    <div class="input-group mb-3">
                       <span class="input-group-text" style="display: flow;">
                         <img src="dist/img/IconEdit.svg" alt="Mensagem">
                       </span>
