--- a/index.html
+++ b/index.html
@@ -33,27 +33,29 @@
   </div>
 
   <div class="fundo-jumbo">
-    <div class="row p-5">
-      <div class="p-5 col-md-6">
-        <p class="jumbo-header">
-          Cobranças e faturação descomplicadas
-        </p>
-        <p class="jumbo-text">
-          uma forma rápida e intuitiva de organizar a sua faturação e
-          agendar cobranças automáticas
-        </p>
-        <div>
-          <button class="btn-calltoaction rounded-pill" type="button">
-            Saber mais
-          </button>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <p class="jumbo-header">
+            Cobranças e faturação descomplicadas
+          </p>
+          <p class="jumbo-text">
+            uma forma rápida e intuitiva de organizar a sua faturação e
+            agendar cobranças automáticas
+          </p>
+          <div>
+            <button class="btn-calltoaction rounded-pill" type="button">
+              Saber mais
+            </button>
+          </div>
+        </div>
+        <div class="col-md-6">
         </div>
       </div>
-      <div class="col-md-6">
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <div class="msg-pode-contar">com o pay&go pode contar com</div>
+      <div class="row">
+        <div class="col">
+          <div class="msg-pode-contar">com o pay&go pode contar com</div>
+        </div>
       </div>
     </div>
   </div>
@@ -228,7 +230,7 @@
             <table style="width:100%">
               <tr>
                 <td>
-                  <div class="input-group has-validation">
+                  <div class="input-group">
                     <span class="input-group-text">
                       <img src="dist/img/IconMail.svg" alt="Nome">
                     </span>
@@ -246,7 +248,7 @@
                 </td>
               </tr>
               <tr>
-                <td class="">
+                <td>
                   <button id="btnNewsletter" class="btn-newsletter rounded-pill" type="button">
                     Subscrever
                   </button>
@@ -345,8 +347,8 @@
               method="post" class="form-wrapper">
 
               <div class="row">
-                <div class="col-md-6 ig-contact">
-                  <div class="input-group has-validation">
+                <div class="col-md-6">
+                  <div class="input-group mb-3">
                     <span class="input-group-text">
                       <img src="dist/img/IconPerson.svg" alt="Nome">
                     </span>
@@ -354,8 +356,8 @@
                       required>
                   </div>
                 </div>
-                <div class="col-md-6 ig-contact">
-                  <div class="input-group has-validation">
+                <div class="col-md-6 ">
+                  <div class="input-group mb-3">
                     <span class="input-group-text">
                       <img src="dist/img/IconPhone.svg" alt="Telemovel">
                     </span>
@@ -365,8 +367,8 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-md-6 ig-contact">
-                  <div class="input-group has-validation">
+                <div class="col-md-6 ">
+                  <div class="input-group mb-3">
                     <span class="input-group-text">
                       <img src="dist/img/IconMail.svg" alt="Nome">
                     </span>
@@ -374,8 +376,8 @@
                       required>
                   </div>
                 </div>
-                <div class="col-md-6 ig-contact">
-                  <div class="input-group has-validation">
+                <div class="col-md-6 ">
+                  <div class="input-group mb-3">
                     <span class="input-group-text">
                       <img src="dist/img/IconLightbulb.svg" alt="Nome">
                     </span>
@@ -385,8 +387,8 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-md-12 ig-contact">
-                  <div class="input-group has-validation">
+                <div class="col-md-12 ">
+                  <div class="input-group mb-3">
                     <span class="input-group-text" style="display: flow;">
                       <img src="dist/img/IconEdit.svg" alt="Mensagem">
                     </span>
@@ -398,6 +400,7 @@
 
 
               <div class="row">
+                <div class="col-md-6"></div>
                 <div class="col-md-6 ig-contact">
                   <button type="button" id="btnEnviar" class="btn-contacto rounded-pill">Enviar Mensagem</button>
                 </div>
